--- a/app/src/main/res/layout/activity_mine_balance.xml
+++ b/app/src/main/res/layout/activity_mine_balance.xml
@@ -5,133 +5,180 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        android:background="@color/white">
-        <ImageView
-            android:id="@+id/mine_balance_back"
-            android:layout_width="@dimen/dp_8"
-            android:layout_height="@dimen/dp_12"
-            android:src="@mipmap/base_title_back"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_centerVertical="true"
-            android:tint="@color/black"
-            android:layout_marginStart="@dimen/dp_15" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_17"
-            android:layout_centerInParent="true"
-            android:textColor="@color/black"
-            android:text="@string/balance"/>
-        <TextView
-            android:id="@+id/mine_balance_recording"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_17"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/dp_15"
-            android:layout_centerVertical="true"
-            android:textColor="@color/black"
-            android:text="@string/withdraw_recording"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/dp_15" />
-    </RelativeLayout>
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/mine_balance_rl"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:srlAccentColor="#00000000"
-        app:srlPrimaryColor="#00000000">
-        <com.scwang.smartrefresh.layout.header.ClassicsHeader
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+        android:layout_height="@dimen/dp_170"
+        android:orientation="vertical"
+        android:background="@drawable/base_title_background">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="@dimen/dp_50"
+            android:layout_marginTop="@dimen/dp_20"
+            android:orientation="horizontal">
             <ImageView
-                android:layout_width="@dimen/dp_81"
-                android:layout_height="@dimen/dp_81"
-                android:layout_gravity="center_horizontal"
-                android:scaleType="centerCrop"
-                android:layout_marginTop="@dimen/dp_39"
-                android:src="@mipmap/mine_balance_icon"/>
+                android:id="@+id/mine_balance_back"
+                android:layout_width="@dimen/dp_50"
+                android:layout_height="@dimen/dp_50"
+                android:src="@mipmap/base_title_back"
+                android:padding="@dimen/dp_15"
+                android:layout_centerVertical="true"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/sp_18"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_centerInParent="true"
+                android:textColor="@color/white"
+                android:text="@string/balance_my"/>
+                <View
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="match_parent"></View>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="@string/balance_my_num"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_20"
+                    android:textColor="@color/white"
+                    android:layout_height="match_parent">
+
+                </TextView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_marginTop="@dimen/dp_5"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="@string/balance_my_add"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_13"
+                    android:textColor="@color/white"
+                    android:layout_marginBottom="@dimen/dp_5"
+                    android:layout_height="match_parent">
+                </TextView>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:background="@color/color_faf6f5"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:paddingLeft="@dimen/dp_15"
+            android:gravity="center_vertical"
+            android:paddingRight="@dimen/dp_15"
+            android:background="@color/white"
+            android:layout_height="@dimen/dp_50">
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_18"
-                android:layout_marginTop="@dimen/dp_50"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#6E6565"
-                android:text="@string/available_balance"/>
-            <LinearLayout
+                android:gravity="center_vertical"
+                android:textSize="@dimen/sp_13"
+                android:text="@string/balance_my_ggk"
+                android:layout_height="match_parent">
+            </TextView>
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"></View>
+            <TextView
+                android:id="@+id/tv_balance_gogk"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/dp_10">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_28"
-                    android:textColor="@color/black"
-                    android:text="@string/dao"/>
-                <TextView
-                    android:id="@+id/mine_balance_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_40"
-                    android:textColor="@color/black"
-                    android:text="@string/zero"/>
-            </LinearLayout>
-            <com.wuxiantao.wxt.ui.custom.button.StateButton
-                android:id="@+id/mine_balance_withdraw_red_bag"
-                android:layout_width="@dimen/dp_320"
-                android:layout_height="@dimen/dp_40"
-                app:round="true"
-                android:layout_marginTop="@dimen/dp_30"
-                android:layout_gravity="center_horizontal"
-                app:unableBackgroundStartColor="#FB8E7D"
-                app:unableBackgroundCenterColor="#FB8E7D"
-                app:unableBackgroundEndColor="#FB8E7D"
-                app:unableTextColor="@color/white"
-                app:normalBackgroundStartColor="#FB8E7D"
-                app:normalBackgroundCenterColor="#FB8E7D"
-                app:normalBackgroundEndColor="#FF5655"
-                app:normalOrientation="BL_TR"
-                app:normalShapeType="LINEAR_GRADIENT"
-                app:normalTextColor="@color/white"
-                android:enabled="true"
-                android:padding="0dp"
-                android:text="@string/withdraw_red_bag"/>
-            <com.wuxiantao.wxt.ui.custom.button.StateButton
-                android:id="@+id/mine_balance_withdraw_commission"
-                android:layout_width="@dimen/dp_320"
-                android:layout_height="@dimen/dp_40"
-                app:round="true"
-                android:layout_marginTop="@dimen/dp_20"
-                android:layout_gravity="center_horizontal"
-                app:unableBackgroundStartColor="#FB8E7D"
-                app:unableBackgroundCenterColor="#FB8E7D"
-                app:unableBackgroundEndColor="#FB8E7D"
-                app:unableTextColor="@color/white"
-                app:normalBackgroundStartColor="#FB8E7D"
-                app:normalBackgroundCenterColor="#FB8E7D"
-                android:visibility="gone"
-                app:normalBackgroundEndColor="#FF5655"
-                app:normalOrientation="BL_TR"
-                app:normalShapeType="LINEAR_GRADIENT"
-                app:normalTextColor="@color/white"
-                android:enabled="true"
-                android:text="@string/withdraw_red_bag"
-                android:padding="0dp"/>
+                android:text="@string/balance_my_gogk"
+                android:gravity="center"
+                android:textSize="@dimen/sp_13"
+                android:layout_marginTop="@dimen/dp_8"
+                android:layout_marginBottom="@dimen/dp_8"
+                android:textColor="@color/white"
+                android:paddingLeft="@dimen/dp_15"
+                android:paddingRight="@dimen/dp_15"
+                android:background="@drawable/base_title_background_cercle_10dp"
+                android:layout_height="match_parent">
+
+        </TextView>
         </LinearLayout>
-        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+        <LinearLayout
+            android:id="@+id/tv_balance_top_up"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+            android:paddingLeft="@dimen/dp_15"
+            android:gravity="center_vertical"
+            android:layout_marginTop="@dimen/dp_20"
+            android:paddingRight="@dimen/dp_15"
+            android:background="@color/white"
+            android:layout_height="@dimen/dp_50">
+            <ImageView
+                android:layout_width="@dimen/dp_20"
+                android:src="@mipmap/my_wallet"
+                android:layout_height="@dimen/dp_20">
+
+            </ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/sp_13"
+                android:layout_marginLeft="@dimen/dp_8"
+                android:text="@string/balance_my_top_up"
+                android:layout_height="match_parent">
+            </TextView>
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"></View>
+            <ImageView
+                android:layout_width="@dimen/dp_12"
+                android:src="@mipmap/enter_icon"
+                android:layout_height="@dimen/dp_12">
+
+            </ImageView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/tv_balance_withdraw"
+            android:layout_width="match_parent"
+            android:paddingLeft="@dimen/dp_15"
+            android:gravity="center_vertical"
+            android:layout_marginTop="@dimen/dp_18"
+            android:paddingRight="@dimen/dp_15"
+            android:background="@color/white"
+            android:layout_height="@dimen/dp_50">
+            <ImageView
+                android:layout_width="@dimen/dp_20"
+                android:src="@mipmap/my_gold"
+                android:layout_height="@dimen/dp_20">
+
+            </ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/sp_13"
+                android:layout_marginLeft="@dimen/dp_8"
+                android:text="@string/balance_my_withdraw"
+                android:layout_height="match_parent">
+            </TextView>
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"></View>
+            <ImageView
+                android:layout_width="@dimen/dp_12"
+                android:src="@mipmap/enter_icon"
+                android:layout_height="@dimen/dp_12">
+
+            </ImageView>
+        </LinearLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
