--- a/app/src/main/res/layout/activity_mine_fansi.xml
+++ b/app/src/main/res/layout/activity_mine_fansi.xml
@@ -51,18 +51,138 @@
                 android:textSize="@dimen/sp_18" />
         </LinearLayout>
     </RelativeLayout>
-
-    <com.wuxiantao.wxt.ui.custom.indicator.VPindicator
-        android:id="@+id/mine_fansi_indicator"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_40"
-        app:indicatorHeight="@dimen/dp_2"
-        app:sameLine="false" />
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_15"
+            android:orientation="vertical"
+            android:layout_height="@dimen/dp_230">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_height="@dimen/dp_200">
+                <ImageView
+                    android:layout_width="@dimen/dp_120"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:src="@mipmap/ic_launcher"
+                    android:layout_height="@dimen/dp_120">
+                </ImageView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:layout_height="match_parent">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="@dimen/dp_30">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:text="@string/myfriend_earn"
+                            android:gravity="center_vertical"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/sp_14"
+                            android:layout_height="match_parent">
+                        </TextView>
 
-    <com.wuxiantao.wxt.ui.custom.viewpager.LazyViewPager
-        android:id="@+id/mine_fansi_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                        <TextView
+                            android:id="@+id/tv_fansi_total"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="@dimen/dp_5"
+                            android:gravity="center_vertical"
+                            android:text="@string/myfriend_earn_price"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/sp_13"></TextView>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:layout_height="@dimen/dp_25">
+                        <View
+                            android:layout_width="@dimen/dp_10"
+                            android:background="@color/tomato"
+                            android:layout_marginRight="@dimen/dp_8"
+                            android:layout_height="@dimen/dp_10"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:text="@string/myfriend_earn_zhitui"
+                            android:gravity="center_vertical"
+                            android:textColor="@color/gray"
+                            android:textSize="@dimen/sp_10"
+                            android:layout_height="match_parent">
+                        </TextView>
+                        <TextView
+                            android:id="@+id/tv_fansi_total_zhitui"
+                            android:layout_width="wrap_content"
+                            android:text="@string/myfriend_earn_price"
+                            android:gravity="center_vertical"
+                            android:textColor="@color/gray"
+                            android:layout_marginLeft="@dimen/dp_5"
+                            android:textSize="@dimen/sp_10"
+                            android:layout_height="match_parent">
+                        </TextView>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:layout_height="@dimen/dp_25">
+                        <View
+                            android:layout_width="@dimen/dp_10"
+                            android:background="@color/orange"
+                            android:layout_marginRight="@dimen/dp_8"
+                            android:layout_height="@dimen/dp_10"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:text="@string/myfriend_earn_jianjie"
+                            android:gravity="center_vertical"
+                            android:textColor="@color/gray"
+                            android:textSize="@dimen/sp_10"
+                            android:layout_height="match_parent">
+                        </TextView>
+                        <TextView
+                            android:id="@+id/tv_fansi_total_jianjie"
+                            android:layout_width="wrap_content"
+                            android:text="@string/myfriend_earn_price"
+                            android:gravity="center_vertical"
+                            android:textColor="@color/gray"
+                            android:layout_marginLeft="@dimen/dp_5"
+                            android:textSize="@dimen/sp_10"
+                            android:layout_height="match_parent">
+                        </TextView>
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:text="@string/myfriend_today_rebate"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/dp_16"
+                android:textColor="@color/black"
+                android:layout_height="match_parent">
+
+            </TextView>
+        </LinearLayout>
+        <com.wuxiantao.wxt.ui.custom.indicator.VPindicator
+            android:id="@+id/mine_fansi_indicator"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_40"
+            app:indicatorHeight="@dimen/dp_2"
+            app:sameLine="false" />
+
+        <com.wuxiantao.wxt.ui.custom.viewpager.LazyViewPager
+            android:id="@+id/mine_fansi_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </LinearLayout>
 </LinearLayout>
