--- a/app/src/main/res/layout/item_fansi_directly.xml
+++ b/app/src/main/res/layout/item_fansi_directly.xml
@@ -1,42 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_fansi_directly_layout"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="wrap_content"
     android:clickable="true">
 
-    <ImageView
-        android:id="@+id/item_fansi_directly_headimg"
-        android:layout_width="@dimen/dp_40"
-        android:layout_height="@dimen/dp_40"
-        android:layout_marginLeft="@dimen/dp_15"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginBottom="@dimen/dp_6"
-        android:src="@drawable/mine_header" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/item_fansi_directly_headimg"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:src="@drawable/mine_header" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/dp_8"
+            android:layout_height="@dimen/dp_60">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_30">
+                <TextView
+                    android:id="@+id/item_fansi_directly_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:paddingBottom="@dimen/dp_4"
+                    android:text="小猫咪"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/sp_16" />
+                <ImageView
+                    android:layout_width="@dimen/dp_12"
+                    android:src="@mipmap/mine_header_crown"
+                    android:layout_height="@dimen/dp_12"></ImageView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_30">
 
-    <TextView
-        android:id="@+id/item_fansi_directly_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_24"
-        android:layout_toRightOf="@+id/item_fansi_directly_headimg"
-        android:text="小猫咪"
-        android:textColor="@color/black"
-        android:textSize="@dimen/sp_15" />
-
-    <TextView
-        android:id="@+id/item_fansi_directly_vip_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="@dimen/dp_33"
-        android:layout_marginRight="@dimen/dp_17"
-        android:text="游戏等级/任务完成"
-        android:textColor="@color/color_888"
-        android:textSize="@dimen/sp_12" />
-
+                <TextView
+                    android:id="@+id/item_fansi_directly_vip_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="游戏等级/任务完成"
+                    android:textColor="@color/color_888"
+                    android:textSize="@dimen/sp_12" />
+                <TextView
+                    android:id="@+id/item_fansi_contribute"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="right|center_vertical"
+                    android:layout_marginRight="@dimen/dp_17"
+                    android:text="贡献****元"
+                    android:textColor="@color/color_888"
+                    android:textSize="@dimen/sp_12" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -44,4 +69,4 @@
         android:layout_marginLeft="@dimen/dp_14"
         android:layout_marginRight="@dimen/dp_14"
         android:background="@color/color_fd6f57" />
-</RelativeLayout>
+</LinearLayout>
