--- a/app/src/main/res/layout/fragment_my_deposit.xml
+++ b/app/src/main/res/layout/fragment_my_deposit.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,10 +34,10 @@
                     android:id="@+id/rt_personInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/dp_12"
                     android:background="@drawable/base_title_background"
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/dp_17"
+                    android:paddingTop="@dimen/dp_12"
                     android:paddingBottom="@dimen/dp_24">
 
                     <TextView
@@ -88,6 +89,45 @@
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_13" />
 
+                    <TextView
+                        android:id="@+id/tv_scrapcard_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/iv_mine_header"
+                        android:layout_marginLeft="@dimen/dp_23"
+                        android:layout_marginTop="@dimen/dp_19"
+                        android:text="@string/mine_text4"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_14" />
+
+                    <TextView
+                        android:id="@+id/tv_scrapcard_num"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_scrapcard_title"
+                        android:layout_alignLeft="@+id/tv_scrapcard_title"
+                        android:layout_marginTop="@dimen/dp_30"
+                        android:text="0"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_16" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_scrapcard_title"
+                        android:layout_alignTop="@+id/tv_scrapcard_num"
+                        android:layout_toRightOf="@+id/tv_scrapcard_num"
+                        android:paddingTop="@dimen/dp_2"
+                        android:text="张"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_13" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="昨日获得70张"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_10" />
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -288,6 +328,7 @@
                         android:text="帮助中心"
                         android:textColor="@color/black"
                         android:textSize="@dimen/sp_12" />
+
                     <TextView
                         android:id="@+id/tv_mine_set"
                         android:layout_width="0dp"
@@ -317,6 +358,7 @@
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
+
         <com.scwang.smartrefresh.layout.footer.ClassicsFooter
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
