--- a/app/src/main/res/layout/activity_mine_fansi.xml
+++ b/app/src/main/res/layout/activity_mine_fansi.xml
@@ -66,12 +66,11 @@
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:layout_height="@dimen/dp_200">
-                <ImageView
-                    android:layout_width="@dimen/dp_120"
-                    android:layout_marginLeft="@dimen/dp_15"
-                    android:src="@mipmap/ic_launcher"
-                    android:layout_height="@dimen/dp_120">
-                </ImageView>
+                <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/mPieChart"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:gravity="center_vertical"
