--- a/app/src/main/res/layout/activity_mine_balance.xml
+++ b/app/src/main/res/layout/activity_mine_balance.xml
@@ -44,13 +44,15 @@
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:layout_height="wrap_content">
+
                 <TextView
+                    android:id="@+id/tv_balance_money"
                     android:layout_width="wrap_content"
-                    android:text="@string/balance_my_num"
+                    android:layout_height="match_parent"
                     android:gravity="center"
-                    android:textSize="@dimen/sp_20"
+                    android:text="@string/balance_my_num"
                     android:textColor="@color/white"
-                    android:layout_height="match_parent">
+                    android:textSize="@dimen/sp_20">
 
                 </TextView>
             </LinearLayout>
@@ -60,6 +62,7 @@
                 android:layout_marginTop="@dimen/dp_5"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/tv_balance_cash"
                     android:layout_width="wrap_content"
                     android:text="@string/balance_my_add"
                     android:gravity="center"
@@ -105,7 +108,7 @@
                 android:textColor="@color/white"
                 android:paddingLeft="@dimen/dp_15"
                 android:paddingRight="@dimen/dp_15"
-                android:background="@drawable/base_title_background_cercle_10dp"
+                android:background="@drawable/base_title_background_cercle_18dp"
                 android:layout_height="match_parent">
 
         </TextView>
