--- a/app/src/main/res/layout/item_balance_withdraw.xml
+++ b/app/src/main/res/layout/item_balance_withdraw.xml
@@ -34,7 +34,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/dp_15"
-            android:visibility="gone"
+            android:visibility="visible"
             android:background="@mipmap/selected_icon"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="@dimen/dp_15" />
