--- a/app/src/main/res/layout/activity_change_pass_word.xml
+++ b/app/src/main/res/layout/activity_change_pass_word.xml
@@ -30,6 +30,7 @@
                     android:tint="@color/color_626161"
                     android:layout_centerVertical="true"/>
                 <TextView
+                    android:id="@+id/change_password_title"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:textSize="@dimen/sp_18"
@@ -43,12 +44,13 @@
             </LinearLayout>
 
             <com.rengwuxian.materialedittext.MaterialEditText
-                android:id="@+id/setting_pass_word_old_input"
+                android:id="@+id/change_password_old_input"
                 android:layout_marginTop="@dimen/dp_30"
                 android:layout_width="@dimen/dp_320"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                app:met_maxCharacters="16"
+                app:met_maxCharacters="6"
+                android:maxLength="6"
                 app:met_floatingLabel="normal"
                 app:met_baseColor="@color/grey"
                 app:met_primaryColor="@color/black"
@@ -57,24 +59,16 @@
                 android:hint="@string/input_old_pw"
                 android:inputType="textPassword"
                 android:textCursorDrawable="@drawable/text_cursor"/>
-            <TextView
-                android:id="@+id/setting_pass_word_forget"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_13"
-                android:layout_marginLeft="@dimen/dp_15"
-                android:textColor="@drawable/forget_pw_text_selector"
-                android:clickable="true"
-                android:visibility="gone"
-                android:text="@string/forget_pw_"/>
+
 
             <com.rengwuxian.materialedittext.MaterialEditText
-                android:id="@+id/setting_pass_word_new_input"
+                android:id="@+id/change_password_new_input"
                 android:layout_marginTop="@dimen/dp_20"
                 android:layout_width="@dimen/dp_320"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                app:met_maxCharacters="16"
+                app:met_maxCharacters="6"
+                android:maxLength="6"
                 app:met_floatingLabel="normal"
                 app:met_baseColor="@color/grey"
                 app:met_primaryColor="@color/black"
@@ -92,27 +86,17 @@
                     android:textColor="@color/gray"
                     android:layout_height="wrap_content">
                 </TextView>
-            <com.wuxiantao.wxt.ui.custom.button.StateButton
-                android:id="@+id/setting_pass_word_confirm_setting"
+            <TextView
+                android:id="@+id/change_password_submit"
                 android:layout_width="@dimen/dp_320"
                 android:layout_height="@dimen/dp_40"
-                android:padding="0dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/dp_50"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:background="@drawable/base_title_background_cercle_18dp"
                 android:layout_marginBottom="@dimen/dp_30"
-                app:round="true"
-                android:enabled="false"
-                app:unableBackgroundStartColor="#FB8E7D"
-                app:unableBackgroundCenterColor="#FB8E7D"
-                app:unableBackgroundEndColor="#FB8E7D"
-                app:unableTextColor="@color/white"
-                app:normalBackgroundStartColor="#FB8E7D"
-                app:normalBackgroundCenterColor="#FB8E7D"
-                app:normalBackgroundEndColor="#FF5655"
-                app:normalOrientation="BL_TR"
-                app:normalShapeType="LINEAR_GRADIENT"
-                app:normalTextColor="@color/white"
-                android:textSize="@dimen/sp_15"
+                android:textSize="@dimen/sp_17"
                 android:text="@string/udpate_submit"/>
         </LinearLayout>
     </com.wuxiantao.wxt.ui.custom.scrollview.ReboundScrollView>
