--- a/app/src/main/res/layout/activity_mine_balance.xml
+++ b/app/src/main/res/layout/activity_mine_balance.xml
@@ -17,10 +17,14 @@
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/mine_balance_back"
-                android:layout_width="@dimen/dp_50"
+                android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_50"
+
                 android:src="@mipmap/base_title_back"
-                android:padding="@dimen/dp_15"
+                android:paddingLeft="@dimen/dp_15"
+                android:paddingTop="@dimen/dp_15"
+                android:paddingBottom="@dimen/dp_15"
+                android:paddingRight="@dimen/dp_35"
                 android:layout_centerVertical="true"/>
             <TextView
                 android:layout_width="0dp"
@@ -31,9 +35,14 @@
                 android:layout_centerInParent="true"
                 android:textColor="@color/white"
                 android:text="@string/balance_my"/>
-                <View
-                    android:layout_width="@dimen/dp_50"
-                    android:layout_height="match_parent"></View>
+                <TextView
+                    android:id="@+id/mine_balance_details"
+                    android:layout_width="@dimen/dp_70"
+                    android:text="@string/balance_my_detail"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_14"
+                    android:layout_height="match_parent"></TextView>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
